--- a/forge20/src/main/resources/META-INF/mods.toml
+++ b/forge20/src/main/resources/META-INF/mods.toml
@@ -15,7 +15,7 @@ showAsResourcePack=false
   modId="eliteholograms"
   version="${version}"
   displayName="Elite Holograms"
-  displayURL="https://discord.gg/strictgaming"
+  displayURL="https://strictgaming.com"
   credits="StrictGaming"
   authors="EliteScouter"
   description='''
