--- a/forge19/build.gradle
+++ b/forge19/build.gradle
@@ -14,7 +14,7 @@ apply plugin: 'java'
 apply plugin: 'maven-publish'
 
 group = 'com.strictgaming.elite.holograms'
-version = '1.0.1'
+version = '1.19.2-1.0.2'
 archivesBaseName = 'EliteHolograms'
 
 // Java version compatibility
