fix: Add proper LuckPerms API integration across all mod versions
- Add LuckPerms API dependency to forge19, forge20, and neo21 build.gradle files
- Replace fragile reflection-based LuckPerms detection with official API calls
- Update UtilPermissions classes to use LuckPermsProvider.get() instead of reflection
- Improve error handling and debug logging for permission system detection
- Fix "No permission system detected" issue when LuckPerms is installed

This resolves LuckPerms integration issues across Forge 1.19.2, Forge 1.20.1, and NeoForge 1.21 versions.

--- a/neo21/build.gradle
+++ b/neo21/build.gradle
@@ -19,6 +19,7 @@ group = mod_group_id
 
 repositories {
     mavenLocal()
+    maven { url = 'https://oss.sonatype.org/content/repositories/snapshots' }
 }
 
 base {
@@ -121,6 +122,9 @@ dependencies {
 
     // Add Gson dependency
     implementation 'com.google.code.gson:gson:2.10.1'
+    
+    // Permission system APIs (compileOnly - they're provided by the server)
+    compileOnly 'net.luckperms:api:5.4'
 
     // Example mod dependency using a mod jar from ./libs with a flat dir repository
     // This maps to ./libs/coolmod-${mc_version}-${coolmod_version}.jar
