Update .gitignore and modify subproject commit references
- Remove the trailing slash from the EliteHolograms.wiki entry in .gitignore for consistency.
- Update the subproject commit reference in EliteHolograms.wiki to reflect the latest changes.
- Add a blank line at the end of several command classes to adhere to coding standards.

These changes improve file management and maintain code quality across the project.

--- a/.gitignore
+++ b/.gitignore
@@ -59,7 +59,7 @@ tmp/
 local.properties
 .loadpath
 .factorypath
-EliteHolograms.wiki/
+EliteHolograms.wiki
 
 ##############################
 ## NetBeans
