chore(build): Upgrade shadow plugin and refactor JAR packaging strategy
- Update shadow plugin from 6.1.0 to 7.1.2 in root build.gradle
- Replace gradle.org plugin repository with direct gradle.plugin reference
- Migrate from manual fat JAR creation to shadowJar task for dependency management
- Add package relocation for Adventure API (net.kyori) to prevent mod conflicts
- Configure shadowJar to exclude conflicting packages (gson, intellij, jetbrains)
- Implement proper service file merging in shadowJar configuration
- Update reobf task to use shadowJar output instead of regular jar
- Add versionedRelease task dependency on reobfShadowJar for proper build ordering
- Configure assemble task to depend on reobfShadowJar for correct artifact generation
- Keep slim jar classifier for backward compatibility
- Apply shadow plugin to neo21 module with version 8.3.5
- Convert Adventure API dependencies from jarJar to shadow configuration with exclusions
- Ensure reproducible builds with consistent file timestamps and ordering

--- a/forge19/build.gradle
+++ b/forge19/build.gradle
@@ -2,7 +2,6 @@ buildscript {
     repositories {
         mavenCentral()
         maven { url = 'https://maven.minecraftforge.net/' }
-        maven { url = 'https://plugins.gradle.org/m2/' }
     }
     dependencies {
         classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1.+'
@@ -120,14 +119,13 @@ processResources {
     }
 }
 
-// Create a fat JAR that includes our dependencies
-jar {
-    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+// Configure shadowJar to relocate packages
+shadowJar {
+    archiveClassifier = ''
+    configurations = [project.configurations.embed]
     
-    // Add all dependencies to the JAR
-    from {
-        configurations.embed.collect { it.isDirectory() ? it : zipTree(it) }
-    }
+    // Relocate Adventure API to prevent conflicts with other mods
+    relocate 'net.kyori', 'com.strictgaming.elite.holograms.libs.net.kyori'
     
     // Exclude META-INF files from dependencies
     exclude 'META-INF/MANIFEST.MF'
@@ -145,6 +143,9 @@ jar {
     preserveFileTimestamps = false
     reproducibleFileOrder = true
     
+    // Merge service files properly
+    mergeServiceFiles()
+    
     manifest {
         attributes(
             'Specification-Title': project.name,
@@ -157,16 +158,37 @@ jar {
     }
 }
 
-// Fix reobf dependency
+// Regular jar task - not used but kept for compatibility
+jar {
+    archiveClassifier = 'slim'
+    manifest {
+        attributes(
+            'Specification-Title': project.name,
+            'Specification-Vendor': 'strictgaming',
+            'Specification-Version': project.version,
+            'Implementation-Title': project.name,
+            'Implementation-Version': project.version,
+            'Implementation-Vendor': 'strictgaming'
+        )
+    }
+}
+
+// Fix reobf dependency - use shadowJar output
 reobf {
-    jar {}
+    shadowJar {}
 }
 
 // Only register the task if it doesn't already exist
 tasks.findByName('versionedRelease') ?: tasks.register('versionedRelease', Copy) {
+    dependsOn 'reobfShadowJar'
     from("build/libs/${archivesBaseName}-${version}.jar")
     into('../../release/')
     rename("${archivesBaseName}-${version}.jar", "${archivesBaseName}-${version}-Forge.jar")
+}
+
+// Replace the default jar task in assemble with shadowJar
+tasks.named('assemble').configure {
+    dependsOn 'reobfShadowJar'
 }
 
 build.finalizedBy('versionedRelease')
